syntax = "proto3";

option java_package = "ca.grpc";

service registration{

	rpc login(loginRequest) returns (loginResponse);

	rpc register(stream employee)	returns (employeeList);

	rpc logout(logoutResponse) returns (empty);

}

service deviceCheck{

	rpc login(loginRequest) returns (loginResponse);

	rpc deviceCheck(deviceRequest) returns (stream deviceList);

	rpc logout(empty) returns (logoutResponse);

}



message loginRequest{
	int32 empNo = 1;
	string empName = 2;

}

message loginResponse{

	string responseMessage = 1;
	string confirm = 2;
}

message employee {
  int32 empNo = 1;
  string empName = 2;
  int32 shift = 3;
}


message employeeList {
 string val = 1;
}

message logoutResponse{
		enum Enum {
        Admin = 0;
        Manager = 1;
        Employee = 2;
    }
string confirmMessage = 1;
    Enum detail = 2;

}


message empty{

}


message deviceRequest {
  string request = 1;
}

message deviceList {
 string val = 1;
}
